# RECTIFY

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  AUDIT_REPORT.md  BBMap_STAR_BWA.sh  CHANGELOG.md  CLAUDE.md  LICENSE  PLOT_SKILLS.md  PROJECT_STATUS.md  README.md  TODO.md  annotate_pA_sites_and_check_for_downstream_AG_richness.py  collapse_quantseq_bam_to_three_prime_end.py  generate_figures.py  mkdocs.yml  plot_AG_richness_in_pA_sites_by_ORF_overlap.R  process_TIF_seq_UTR_and_AG_mispriming_screening.py  pyproject.toml
.github/workflows/: tests.yml
conda-recipe/: meta.yaml
docs/: ALIGNER_RECOMMENDATIONS.md  ARCHITECTURE.md  BUGS_TO_FIX.md  CHANGELOG.md  DRS_FIVE_PRIME_END_LIMITATIONS.md  DRS_POLYA_ADAPTER_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  JUNCTION_SHIFT_FDR.md  THREE_PASS_ADAPTER_TRIMMING.md  changelog.md  contributing.md  coordinate_system.md  index.md  installation.md  quickstart.md  requirements.txt  workshop_copilot_testing.md
docs/algorithms/: 3prime_indel_correction.md  adaptive_clustering.md  apa_detection.md  false_junction_handling.md  multi_aligner_consensus.md  netseq_refinement.md  overview.md  softclip_rescue.md
docs/api/: analyze.md  core.md  index.md  utils.md  visualize.md
docs/figures/: README.md  generate_figures.py
docs/user_guide/: bundled_data.md  hpc_slurm.md  input_formats.md  multi_sample.md  output_formats.md
docs/user_guide/commands/: aggregate.md  align.md  analyze.md  batch.md  consensus.md  correct.md  export.md  extract.md  install_aligners.md  netseq.md  overview.md  run.md  split.md  train_polya.md  validate.md
rectify/: __init__.py  __main__.py  cli.py  config.py  provenance.py  slurm.py
rectify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rectify/calibration/: __init__.py  calibrate_shift_corrections.py
rectify/core/: __init__.py  ag_mispriming.py  aggregate_command.py  align_command.py  analyze_command.py  atract_detector.py  bam_processor.py  bam_writer.py  batch_command.py  chimeric_consensus.py  consensus.py  consensus_command.py  correct_command.py  corrected_consensus.py  drs_trim_command.py  exclusion_regions.py  export_command.py  extract_command.py  false_junction_filter.py  indel_corrector.py  install_aligners_command.py  junction_refiner.py  junction_validator.py  local_aligner.py  mpb_split_reads.py  multi_aligner.py  netseq_bam_processor.py  netseq_command.py  netseq_deconvolution.py  netseq_output.py  netseq_refiner.py  polya_model.py  polya_trimmer.py  position_index.py  preprocess.py  prescan_command.py  processing_stats.py  restore_polya_command.py  run_all_command.py  run_command.py  (+9 more)
rectify/core/aggregate/: __init__.py  five_prime.py  junctions.py  three_prime.py
rectify/core/analyze/: __init__.py  apa_detection.py  atract_refiner.py  clustering.py  deconvolution.py  deseq2.py  gene_attribution.py  genomic_distribution.py  go_enrichment.py  heatmap.py  junction_analysis.py  junction_validation.py  motif_discovery.py  pan_mutant_refiner.py  pca.py  shift_analysis.py  summary.py
rectify/core/classify/: __init__.py  full_length_classifier.py
rectify/data/: VALIDATION_READS.md  __init__.py  gapmm2.bam  gapmm2.bam.bai  mapPacBio.bam  mapPacBio.bam.bai  minimap2.bam  minimap2.bam.bai  rectified.bam  rectified.bam.bai  rectified_softclip.bam  rectified_softclip.bam.bai  validation_reads.bam  validation_reads.bam.bai
rectify/data/aligners/: deSALT.bam  deSALT.bam.bai  gapmm2.bam  gapmm2.bam.bai  mapPacBio.bam  mapPacBio.bam.bai  minimap2.bam  minimap2.bam.bai  uLTRA.bam  uLTRA.bam.bai
rectify/data/motif_databases/: scerevisiae_tf_motifs.meme
rectify/data/output/: validation_reads.bam.bai  validation_reads_igv.html
rectify/data/output/aligners/: validation_reads.deSALT.bam  (+9 more)
rectify/data/validation/: PROVENANCE.json  README.md  VALIDATION_READS.md  corrected_3ends.tsv  corrected_3ends_stats.tsv  generate_igv_html.py  validation_reads.bam  validation_reads.bam.bai  validation_reads.bam.stale  validation_reads_dorado_source.bam  validation_reads_dorado_source.bam.bai  validation_reads_igv.html
rectify/scripts/: build_pan_mutant_netseq_database.py  create_atract_netseq_reference.py
rectify/slurm_profiles/: hpc_cpu.yaml  hpc_gpu.yaml  sherlock_gpu.yaml  sherlock_larsms.yaml  slurm_generic.yaml
rectify/utils/: __init__.py  alignment.py  chromosome.py  genome.py  junction_bed.py  provenance.py  splice_motif.py  stats.py
rectify/visualize/: __init__.py  config.py  coverage.py  figure_utils.py  gene_track.py  metagene.py  metagene_loaders.py  multi_track.py  read_browser.py  ridge.py  vep_panels.py
scripts/: analyze_0a_site_distribution.py  analyze_polya_tails_from_bams.py  create_indel_correction_figure.py  extract_combined_netseq.py  extract_netseq_peaks.py  extract_pan_netseq.py  generate_bedgraph_from_polished.py  generate_readme_figures.py  plot_oligo_a_spreading.py  test_variant_aware_rescue.py
scripts/polya_analysis_results/: a_richness.npy  polya_tail_analysis.json  tail_lengths.npy
tests/: __init__.py  test_ag_mispriming.py  test_analyze.py  test_apa_detection.py  test_atract.py  test_bam_writer.py  test_chimeric_consensus.py  test_config.py  test_consensus_selection.py  test_gapmm2_seq_restore.py  test_indel_correction.py  test_junction_refiner.py  test_junction_validator.py  test_metagene.py  test_metagene_loaders.py  test_netseq_refiner.py  test_no_duplicate_primaries.py  test_parallel_aligner_schedule.py  test_parallel_processing.py  test_polya_trimming.py  test_provenance_and_spikein.py  test_run_command_wiring.py  test_sample_column_autodetect.py  test_slurm.py  test_splice_junction.py  test_terminal_exon_refiner.py  test_validation_reads.py  test_variant_aware_rescue.py  test_xr_flag.py
(+62 files in other folders)
