[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rectify-rna"
version = "2.1.2"
description = "Unified RNA 3' End Correction Framework for poly(A)-tailed RNA sequencing"
authors = [
    {name = "Kevin R. Roy", email = "kevinrjroy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["RNA", "3-prime-end", "polyadenylation", "RNA-seq", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pysam>=0.19.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyBigWig>=0.3.18",
    "biopython>=1.79",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/k-roy/RECTIFY"
"Bug Tracker" = "https://github.com/k-roy/RECTIFY/issues"
"Publication" = "https://pubmed.ncbi.nlm.nih.gov/31128237/"

[project.scripts]
rectify = "rectify.cli:main"

[tool.setuptools]
packages = ["rectify", "rectify.core", "rectify.utils"]

[tool.setuptools.package-data]
rectify = ["data/models/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=rectify --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
