[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rectify-rna"
version = "2.7.7"
description = "RNA 5' and 3' End Correction Tool with Intron Refinement and Ambiguity Resolution"
authors = [
    {name = "Kevin R. Roy", email = "kevinrjroy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["RNA", "3-prime-end", "polyadenylation", "RNA-seq", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core Python dependencies (always installed with pip install rectify-rna)
    "pysam>=0.19.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pyBigWig>=0.3.18",
    "biopython>=1.79",
    "tqdm>=4.60.0",
    "pydeseq2>=0.4.0",
    "mappy>=2.24",           # Python bindings for minimap2 (required by gapmm2)
]

[project.optional-dependencies]
# External binary tools — cannot be installed via pip; use conda/mamba:
#   mamba install -c bioconda minimap2 bbmap gapmm2 samtools htslib desalt meme
aligners = [
    "gapmm2>=0.2",           # minimap2 wrapper with edlib refinement (pip-installable)
]
junction-aligners = [
    "ultra-bioinformatics>=0.1",  # uLTRA annotation-guided aligner (pip-installable)
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-autorefs>=0.5.0",
    "pymdown-extensions>=10.0",
]
visualize = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
# Binary conda-only dependencies (documented here for conda meta.yaml alignment):
#   - minimap2 >=2.24         (bioconda)
#   - bbmap >=39.0            (bioconda, provides mapPacBio.sh)
#   - samtools >=1.15         (bioconda)
#   - htslib >=1.15           (bioconda, provides bgzip)
#   - desalt >=1.5            (bioconda, optional tier-2 aligner)
#   - meme >=5.4.0            (bioconda, optional motif analysis)

[project.urls]
"Homepage" = "https://github.com/k-roy/RECTIFY"
"Documentation" = "https://rectify-rna.readthedocs.io"
"Bug Tracker" = "https://github.com/k-roy/RECTIFY/issues"
"Publication" = "https://pubmed.ncbi.nlm.nih.gov/31128237/"

[project.scripts]
rectify = "rectify.cli:main"

[tool.setuptools]
packages = ["rectify", "rectify.core", "rectify.core.analyze", "rectify.utils", "rectify.data", "rectify.visualize"]

[tool.setuptools.package-data]
rectify = [
    "data/models/*.json",
    "data/*.tsv.gz",
    "data/genomes/**/*.gz",
    "data/motif_databases/*.meme",
    "data/validation_reads.bam",
    "data/validation_reads.bam.bai",
    "data/VALIDATION_READS.md",
    "data/rectified.bam",
    "data/rectified.bam.bai",
    "data/aligners/*.bam",
    "data/aligners/*.bai",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=rectify --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
